# image-generale

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: desktop-packages.yml
docs/: desktop-design-guidelines.md  ui-ux-specification-document.md
scripts/: clean-install.ps1  configure-windows-signing.ps1  import-windows-signing-certificate.ps1  prepare-windows-release.ps1  set-version.ps1  verify-windows-signature.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: English.nsh  SimpChinese.nsh  installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/components/: Icon.tsx
src/components/ui/: Button.tsx  ContextMenu.tsx  Dialog.tsx  EmptyState.tsx  Field.tsx  ImageActionBar.tsx  Input.tsx  SectionHeader.tsx  SegmentedControl.tsx  Select.tsx  StatusMessage.tsx
src/features/crop-margin/: CropMarginView.tsx  cropMarginQueue.ts  cropMarginRenderer.ts  cropMarginTemplates.ts  types.ts
src/features/history/: HistoryList.tsx  HistoryRecordCard.tsx  HistoryToolbar.tsx  HistoryView.tsx  historyThumbnails.ts
src/lib/: errors.ts  files.ts  models.ts  storage.ts  upscale.ts  utils.ts
