[package]
name = "image_generator_desktop"
version = "0.1.0"
description = "Desktop shell for Image Generator"
authors = ["project"]
edition = "2021"

[lib]
name = "image_generator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
