[package]
name = "image_generator_desktop"
version = "0.1.2"
description = "Desktop shell for Image Generator"
authors = ["project"]
edition = "2021"

[lib]
name = "image_generator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
